# gifanimus

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: python-publish.yml
gifanimus/: __init__.py
