[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gifanimus"
authors = [{name = "Fibo Metavinci", email = "\u007fpszdw-75nat-5227i-bha5s-y7lai-pebdq-o2agp-3xho4-hd6z6-emxrd-nqe@dmail.ai\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = ["pillow==10.3.0"]

[project.urls]
Home = "https://github.com/inviti8/gifanimus"
